--- a/app/views/hands/raises/line.js.erb
+++ b/app/views/hands/raises/line.js.erb
@@ -1,3 +1,4 @@
 document.getElementById('assistance').innerHTML = "<%= j(render 'line') %>";
 localStorage['waiting-gif'] = localStorage['waiting-gif'] || "https://fotos.mprog.nl/waiting-gifs/wait<%= Random.new.rand(0..9) %>.gif";
 document.getElementById('waiting-gif').src = localStorage['waiting-gif'];
+document.getElementById('assistance').dataset.reloadTimeoutValue = '120';
