--- a/app/views/hands/raises/waiting.js.erb
+++ b/app/views/hands/raises/waiting.js.erb
@@ -1,6 +1,4 @@
 document.getElementById('assistance').innerHTML = "<%= j(render 'waiting') %>";
 localStorage['waiting-gif'] = localStorage['waiting-gif'] || "https://fotos.mprog.nl/waiting-gifs/wait<%= Random.new.rand(0..9) %>.gif";
 document.getElementById('waiting-gif').src = localStorage['waiting-gif'];
-setTimeout(function(){
-	Rails.ajax({ type: 'get', url: '<%= hands_raise_path %>'});
-}, 10000 );
+document.getElementById('assistance').dataset.reloadTimeoutValue = '30';
