--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/browser/favicon-16x16.png">
     <link rel="mask-icon" href="/browser/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#84fab0">
+    <meta name="theme-color" content="<%= @theme_color || '#84fab0' %>">
     <link rel="manifest" href="/manifest.json">
 
     <%= csrf_meta_tags %>
