--- a/app/views/application/_hands_menu.html.erb
+++ b/app/views/application/_hands_menu.html.erb
@@ -4,26 +4,19 @@
     <a href="#" id="ama-dd" class="nasv-link dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside" role="button" aria-expanded="false">
         <div><%= bootstrap_icon "question-circle-fill", size: '24x24', style: 'vertical-align:-0.255em;' %><small><%= tag.span(Hand.waiting.count, class:'ms-1') if current_user.staff? %> Assistentie</small></div>
     </a>
-    <div class="dropdown-menu dropdown-menu-end" id="assistance" aria-labelledby="ama-dd">
+    <div class="dropdown-menu dropdown-menu-end" id="assistance" class="mini-app-body assistance-app" data-controller="reload" data-reload-url-value="<%= hands_raise_path %>" data-reload-defer-value="true">
         <%= render 'assistance' %>
     </div>
 </li>
 
 <% if is_local_ip? && Settings.hands_location_bumper && current_user.student? && current_user.last_known_location.blank? %>
     <script>
-        Rails.ajax({
-            url: '<%= hands_raise_path %>',
-            type: 'get',
-            success: () => (new bootstrap.Dropdown(document.getElementById('ama-dd'))).show()
-        });
+        document.getElementById("assistance").dataset.reloadDeferValue = false;
     </script>
 <% else %>
     <script>
     document.getElementById('ama-dd').addEventListener('show.bs.dropdown', function(e) {
-        Rails.ajax({
-            url: '<%= hands_raise_path %>',
-            type: 'get'
-        });
+        document.getElementById("assistance").dataset.reloadDeferValue = false;
     }, { once: true} )
     </script>
 <% end %>
