dynamic course name in app icon via manifest

--- a/app/views/home/manifest.json.erb
+++ b/app/views/home/manifest.json.erb
@@ -1,7 +1,7 @@
 {
-    "name": "Assist",
+    "name": "<%= Course.short_name %>",
     "display": "standalone",
-    "theme_color": "#F4F9FF",
+    "theme_color": "#f4f9ff",
     "orientation": "portrait",
     "start_url": "/",
     "scope": "/",
