--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,5 +1,7 @@
 <% @page_name = "Register your details" %>
 
+<h1 class="fw-normal text-center"><%= Course.long_name %></h1>
+
 <div class="cards">
 
     <%= form_tag '/profile/save', class: 'mini-app-body d-flex justify-content-between flex-column' do |f| %>
