--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -2,25 +2,22 @@
     <%= render 'course_links' %>
 
     <% if Settings.hands_allow %>
+    <% unless current_user.assistant? %>
     <a href="/assistance">
-        <%= bootstrap_icon "question-circle", size: '24x24', style: 'vertical-align:-0.255em;' %>
-        <small>Assistentie</small>
+        <%= bootstrap_icon "question-circle" %>
+        <label><%= t 'hands.assistance' %></label>
     </a>
+	<% end %>
 
     <% if current_user.staff? %>
     <a href="/hands">
-        <%= bootstrap_icon "people", size: '24x24', style: 'vertical-align:-0.255em;' %>
-        <small>
-            <%= tag.span(Hand.waiting.count, class:'ms-1') if current_user.staff? %> Hands
-        </small>
+        <%= bootstrap_icon "people" %>
+        <label>Hands</label>
     </a>
     <% end %>
     <% end %>
-
-    <%#= render partial: 'hands_menu' %>
-    <%#= render 'menu' %>
 </ul>
-    
-<hr class="d-block d-md-none my-2">
+
+<hr class="d-md-none">
 
 <%= render 'sidebar_content' %>
