--- a/app/views/assistance/index.html.erb
+++ b/app/views/assistance/index.html.erb
@@ -1,3 +1,5 @@
 <div id="assistance" class="mini-app-body assistance-app" data-controller="reload" data-reload-url-value="<%= hands_raise_path %>">
-    <%= render 'assistance' %>
+    <div class="m-3">
+        Loading...
+    </div>
 </div>
