--- a/app/views/auth/mail/code.html.erb
+++ b/app/views/auth/mail/code.html.erb
@@ -1,5 +1,7 @@
 <% @page_name = t('account.login_or_register') %>
 
+<h1 class="fw-normal text-center"><%= Course.long_name %></h1>
+
 <div class="cards">
     <div>
         <p class="lead text-center">
