--- a/app/views/hands/raises/_form.html.erb
+++ b/app/views/hands/raises/_form.html.erb
@@ -8,7 +8,7 @@
         <%= t "hands.briefly_summarize" %>:
     </label>
 
-    <textarea id="assistance-form-question" name="question" class="form-control" rows="3" required placeholder=""></textarea>
+    <textarea id="assistance-form-question" name="question" class="form-control" rows="3" required placeholder="" autofocus></textarea>
 
     <!-- location -->
 
