--- a/app/assets/stylesheets/includes/navbar.scss
+++ b/app/assets/stylesheets/includes/navbar.scss
@@ -31,6 +31,11 @@
 
 @media (max-width: 767.98px)
 {
+    #navbar
+    {
+        height: auto;
+    }
+
     .navbar-brand
     {
         padding:0.1rem;
