--- a/app/assets/stylesheets/includes/sidebar.scss
+++ b/app/assets/stylesheets/includes/sidebar.scss
@@ -227,28 +227,7 @@
 {
     #sidebar
     {
-        position: fixed;
-
-        width: calc(100% - 1.5rem);
-        height: 80%;
-        margin: 0.75rem;
-        border-radius: 40px;
-
-        --bs-offcanvas-transition: transform 0.1s ease-in-out;
-
-        border-top:0;
-
-        .nav-head
-        {
-            margin-top: 0.5rem;
-        }
-
-        box-shadow: 0 10px 30px #777;
-    }
-
-    .offcanvas-backdrop.show
-    {
-        opacity: .2;
+        height: auto;
     }
 }
 
