--- a/app/views/admin/site/_version.html.erb
+++ b/app/views/admin/site/_version.html.erb
@@ -1,1 +1,4 @@
-<p>Programming Lab version <%= ENV['COURSE_SITE_DEPLOYMENT_VERSION'] %></p>
+<p>
+    Programming Lab version <%= ENV['COURSE_SITE_DEPLOYMENT_VERSION'] %> @ 
+    <%= ENV['COURSE_SITE_DEPLOYMENT_VERSION_TAG'] %>
+</p>
