--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -13,7 +13,7 @@ body
 
 a
 {
-    color: var(--bs-link-color-rgb);
+//    color: rgb(var(--bs-link-color-rgb));
 }
 
 #navbar, #sidebar .navbar-nav
