allow disabling of q&a tabs

--- a/app/views/admin/site/_settings.html.erb
+++ b/app/views/admin/site/_settings.html.erb
@@ -1,3 +1,4 @@
+<%= toggle_setting_form('qa_allow', 'Enable questions tab on course pages') %>
 <%= toggle_setting_form('hands_allow', 'Enable student question queue') %>
 <%= toggle_setting_form('hands_only', 'Only use website for assistance queue (redirect users as appropriate)') %>
 <%= toggle_setting_form('hands_location', 'Ask for location (set a location type descriptor below)') %>
