--- a/app/assets/stylesheets/includes/navbar.scss
+++ b/app/assets/stylesheets/includes/navbar.scss
@@ -69,7 +69,7 @@
 
     .navbar-brand.logged_in #course-title *
     {
-        overflow-x:hidden;
+        overflow:hidden;
         text-overflow:ellipsis;
         white-space:nowrap;
     }
