--- a/app/views/application/_menu.html.erb
+++ b/app/views/application/_menu.html.erb
@@ -1,4 +1,4 @@
-<div class="dropdown d-none d-md-block">
+<div class="dropdown <% if logged_in? %> d-none d-md-block <% end %>">
     <button class="btn btn-link dropdown-toggle" type="button" data-bs-toggle="dropdown" accesskey="m">
         <div>
             <%= bootstrap_icon 'person-fill' %>
