show first tab correctly

--- a/app/views/grading/_file_panels.html.erb
+++ b/app/views/grading/_file_panels.html.erb
@@ -1,3 +1,4 @@
+<% first = true %>
 <% cache @submit do %>
     <% @files.each do |filename, contents| %>
     <div class="tab-pane <%= (first = false) || 'show active' if first %>" id="show-file-<%= filename.parameterize %>" role="tabpanel" aria-labelledby="home-tab">
