--- a/app/views/submissions/_grades_overview.html.erb
+++ b/app/views/submissions/_grades_overview.html.erb
@@ -1,58 +1,62 @@
 <% @overview_config.each do |category, definition| %>
 <div id="overview" class="card">
-	<div class="card-body overflow-auto">
-		<h5 class="card-title"><%= category.humanize %></h5>
-		<table class="table table-sm">
-			<%# Table header %>
-			<tr>
-				<%# Assignment name %>
-				<th></th>
-				<%# Subgrades %>
-				<% definition['subgrades'].each do |subgrade| %>
-				<th><%= subgrade.capitalize %></th>
-				<% end %>
-				<%# Final grade %>
-				<% if definition['show_calculated'] %>
-				<th>
-					<% if definition['type'] == 'points' %>
-					<%= t(:points) %>
-					<% else %>
-					<%= t(:grade) %>
-					<% end %>
-				</th>
-				<% end %>
-			</tr>
+    <div class="card-body overflow-auto">
+        <h5 class="card-title"><%= category.humanize %></h5>
+        <table class="table table-sm">
+            <%# Table header %>
+            <tr>
+                <%# Assignment name %>
+                <th></th>
+                <%# Subgrades %>
+                <% definition['subgrades'].each do |subgrade| %>
+                <th><%= subgrade.capitalize %></th>
+                <% end %>
+                <%# Final grade %>
+                <% if definition['show_calculated'] %>
+                <th>
+                    <% if definition['type'] == 'points' %>
+                    <%= t(:points) %>
+                    <% else %>
+                    <%= t(:grade) %>
+                    <% end %>
+                </th>
+                <% end %>
+            </tr>
 
-			<% definition['submits'].each do |submit| %>
-			<%# Each submit within category %>
-			<tr>
-				<%# Submit name %>
-				<th scope="col"><%= formatted_submit_name(submit) %></th>
-				<% definition['subgrades'].each do |subgrade| %>
-				<%# Print each subgrade if it exists for this grade, subgrades are not hidden, and the grade isn't unpublished. %>
-				<%# Else, print a dash. %>
-				<% if @grades_by_pset.key?(submit) && !Settings.grading['grades'][submit]['hide_subgrades'] && @grades_by_pset[submit].subgrades[subgrade] %>
-				<td><%= translate_subgrade(@grades_by_pset[submit].subgrades[subgrade]) %></td>
-				<% else %>
-				<td>-</td>
-				<% end %>
-				<% end %>
-				<% if definition['show_calculated'] %>
-				<%# Print calculated grade for this submit if it is not unpublished or hidden. %>
-				<%# Else, print a dash. %>
-				<% if @grades_by_pset.key?(submit) && !Settings.grading['grades'][submit]['hide_calculated'] %>
-				<% if definition['type'] == 'points' %>
-				<td><%= to_i_if_whole(@grades_by_pset[submit].assigned_grade) %></td>
-				<% else%>
-				<td><%= translate_grade(@grades_by_pset[submit].assigned_grade) %></td>
-				<% end %>
-				<% else %>
-				<td>-</td>
-				<% end %>
-				<% end %>
-			</tr>
-			<% end %>
-		</table>
-	</div>
+            <% definition['submits'].each do |submit, weight| %>
+            <%# Each submit within category %>
+            <tr>
+                <%# Submit name %>
+                <th scope="col"><%= formatted_submit_name(submit) %></th>
+                <% definition['subgrades'].each do |subgrade| %>
+                <%# Print each subgrade if it exists for this grade, subgrades are not hidden, and the grade isn't unpublished. %>
+                <%# Else, print a dash. %>
+                <% if @grades_by_pset.key?(submit) && !Settings.grading['grades'][submit]['hide_subgrades'] && @grades_by_pset[submit].subgrades[subgrade] %>
+                <td><%= translate_subgrade(@grades_by_pset[submit].subgrades[subgrade]) %></td>
+                <% else %>
+                <td>-</td>
+                <% end %>
+                <% end %>
+                <% if definition['show_calculated'] %>
+                <%# Print calculated grade for this submit if it is not unpublished or hidden. %>
+                <%# Else, print a dash. %>
+                <% if @grades_by_pset.key?(submit) && !Settings.grading['grades'][submit]['hide_calculated'] %>
+                <td>
+                    <% if definition['type'] == 'points' && @grades_by_pset[submit].assigned_grade == -1 %>
+                    <%= weight %>
+                    <% elsif definition['type'] == 'points' %>
+                    <%= to_i_if_whole(@grades_by_pset[submit].assigned_grade) %>
+                    <% else %>
+                    <%= translate_grade(@grades_by_pset[submit].assigned_grade) %>
+                    <% end %>
+                </td>
+                <% else %>
+                <td>-</td>
+                <% end %>
+                <% end %>
+            </tr>
+            <% end %>
+        </table>
+    </div>
 </div>
 <% end %>
