--- a/app/views/admin/site/_settings.html.erb
+++ b/app/views/admin/site/_settings.html.erb
@@ -9,6 +9,7 @@
 <% end %>
 <%= toggle_setting_form('hands_show_non_questions', 'Show people who haven\'t asked questions for a while') %>
 <%= change_setting_form('hands_location_type', 'What kind of location is required') %>
+<%= toggle_setting_form('ta_overview_allow', 'Allow assistants access to the overview') %>
 
 <hr>
 
